tests/baselines/reference/classAbstractAccessor(strict=true).errors.txt
classAbstractAccessor.ts(2,17): error TS7033: Property 'a' implicitly has type 'any', because its get accessor lacks a return type annotation.
classAbstractAccessor.ts(3,17): error TS1318: An abstract accessor cannot have an implementation.
classAbstractAccessor.ts(5,17): error TS1318: An abstract accessor cannot have an implementation.


==== classAbstractAccessor.ts (3 errors) ====
    abstract class A {
       abstract get a();
                    ~
!!! error TS7033: Property 'a' implicitly has type 'any', because its get accessor lacks a return type annotation.
       abstract get aa() { return 1; } // error
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
       abstract set b(x: string);
       abstract set bb(x: string) {} // error
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
    }
    